# air-pollution-ezpc

./: GCNLSTM_cost.ipynb  README.md  gcnlstm_training_sec_final.cpp
Float-to-fixed/: CMakeLists.txt  Calculations  Float_to_Fixed.ipynb  backup.cpp  float_to_fixed_edition7.cpp  float_to_int.cpp  fti_clear.cpp  fti_sec.cpp  testing_code.cpp  testing_float_to_fixed.cpp
Notebooks/: GCN in PyTorch.ipynb  GCN-LSTM (2+ layer) in PyTorch.ipynb  GCN_Interpolation.ipynb  GCN_LSTM_forecasting-final.ipynb  GCN_MAIN-tf.ipynb
Runtime/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  gcn_adj_update.cpp  gcn_split.cpp  gcnlstm_cin.cpp  gcnlstm_ezpc_updates.cpp  gcnlstm_fixed.cpp  gcnlstm_fixed_adj.cpp  gcnlstm_fixed_final_no_adj_update.cpp  gcnlstm_fixed_variable.cpp  gcnlstm_nocin.cpp  gcnlstm_run.cpp  gcnlstm_training_clear.cpp  preproc.cpp
Runtime/10Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/11Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/12Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/13Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/14Dec/: A.inp  bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/15Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/16Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/7Dec/: bias.inp  bias2.inp  bias3.inp  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
Runtime/7dec/: recurrent_kernel3.inp
Runtime/8Dec/: inputs2.txt  kernel2.inp  labels2.txt
Runtime/9Dec/: bias.inp  bias2.inp  bias3.inp  bias4.inp  inputs2.txt  kernel.inp  kernel2.inp  kernel3.inp  kernel4.inp  labels2.txt  recurrent_kernel3.inp
convlstm/: conv_lstm.cpp  conv_lstm_version2.cpp  convlstm_secure.cpp
ezpc code/: average.ezpc
files/: dense.bias.txt  dense.weight.txt  gcn_layer1.A.txt  gcn_layer1.bias.txt  gcn_layer1.kernel.txt  gcn_layer2.bias.txt  gcn_layer2.kernel.txt  inputs.txt  inputs2.txt  labels.txt  labels2.txt  lstm.bias_ih_l0.txt  lstm.weight_hh_l0.txt  lstm.weight_ih_l0.txt
gcn_implementations_c++/: GCN_LSTM_1_LAYER_COMPLETE.cpp  gcn_clear_adam.cpp  gcn_lstm_double_layer_no_backpropedits.cpp  gcn_lstm_layer1_complete_pytorch_forwardprop.cpp  gcnlstm_runtimes.cpp  gcnlstm_training_clear.cpp  (+2 more)
(+28 files in other folders)
